--- a/en/index-3.html
+++ b/en/index-3.html
@@ -926,11 +926,11 @@
         <div class="footer-widget footer-link">
           <h4>About</h4>
           <ul>
-            <li><a href="/en/about.html">About</a></li>
-            <li><a href="/en/academics.html">Academics</a></li>
-            <li><a href="/en/faculty.html">Faculty</a></li>
-            <li><a href="/en/advisory.html">Advisory Board</a></li>
-            <li><a href="/en/research.html">Research</a></li>           
+            <li><a href="../en/about.html">About</a></li>
+            <li><a href="../en/academics.html">Academics</a></li>
+            <li><a href="../en/faculty.html">Faculty</a></li>
+            <li><a href="../en/advisory.html">Advisory Board</a></li>
+            <li><a href="../en/research.html">Research</a></li>           
           </ul>
         </div>
       </div>
@@ -939,11 +939,11 @@
         <div class="footer-widget footer-link">
           <h4>Links</h4>
           <ul>
-            <li><a href="/en/accreditation.html">Accreditation Status</a></li>
-            <li><a href="/en/contact.html">Contact</a></li>
-            <li><a href="/en/privacy.html">Privacy Policy</a></li>
-            <li><a href="/en/terms.html">Terms & Conditions</a></li>
-            <li><a href="/en/blog.html">Blog</a></li>
+            <li><a href="../en/accreditation.html">Accreditation Status</a></li>
+            <li><a href="../en/contact.html">Contact</a></li>
+            <li><a href="../en/privacy.html">Privacy Policy</a></li>
+            <li><a href="../en/terms.html">Terms & Conditions</a></li>
+            <li><a href="../en/blog.html">Blog</a></li>
           </ul>
         </div>
       </div>
