--- a/en/courses/brahmanas.html
+++ b/en/courses/brahmanas.html
@@ -12,7 +12,7 @@
 
   <!-- ** Basic Page Needs ** -->
   <meta charset="utf-8">
-  <title>@@title - University of Vedic Sciences</title>
+  <title>Academics - Puranas - University of Vedic Sciences</title>
   <!-- ** Mobile Specific Metas ** -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="University of Vedic Sciecnes Website">
@@ -33,7 +33,6 @@
   <link rel="icon" href="/assets/images/favicon.png" type="image/x-icon">
 
 </head><body data-spy="scroll" data-target="#mainNav">
-
 <nav class="navbar navbar-expand-lg fixed-top trans-navigation">
   <div class="container">
     <a class="navbar-brand" href="/en/index.html">
@@ -73,70 +72,44 @@
 </nav>
 <!--MAIN HEADER AREA END -->
 
-<!--MAIN BANNER AREA START -->
-<div class="page-banner-area page-contact" id="page-banner">
-  <div class="overlay dark-overlay"></div>
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-8 m-auto text-center col-sm-12 col-md-12">
-        <div class="banner-content content-padding">
-          <h1 class="text-white">@@title</h1>
-          <p>Our courses offer a good compromise between the continuous assessment favoured by some universities and the emphasis placed on final exams by others.</p>
+<section class="pt-4">
+    <div class="container pt-4">
+        <div class="pt-4 pb-4">
+                <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
         </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!--MAIN HEADER AREA END -->
+        <h3 class="pt-4 pb-4">Academic Courses in Brāhmanās (4)</h3>
+        <ul>
+            <li>
+                <h4  id="B-01" class="text-primary">1. Ithareya Brāhmanā (B-01)</h4>
+                <p>
+                </p>               
+            </li>
 
-<!-- notice -->
-<section class="section">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <ul class="list-unstyled">
-          <!-- notice item -->
-          <li class="d-md-table mb-4 w-100 border-bottom hover-shadow">
-            <div class="d-md-table-cell text-center p-4 bg-primary text-white mb-4 mb-md-0"><span class="h2 d-block">30</span> APR,2019</div>
-            <div class="d-md-table-cell px-4 vertical-align-middle mb-4 mb-md-0">
-              <a href="notice-single.html" class="h4 mb-3 d-block">Teaching Materials and Testing Methods</a>
-              <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt perferendis saepe omnis officia! Doloribus quae maiores laboriosam praesentium enim fugiat ipsam laudantium assumenda!</p>
-            </div>
-            <div class="d-md-table-cell text-right pr-0 pr-md-4"><a href="notice-single.html" class="btn btn-primary">read more</a></div>
-          </li>
-          <!-- notice item -->
-          <li class="d-md-table mb-4 w-100 border-bottom hover-shadow">
-            <div class="d-md-table-cell text-center p-4 bg-primary text-white mb-4 mb-md-0"><span class="h2 d-block">27</span> APR,2019</div>
-            <div class="d-md-table-cell px-4 vertical-align-middle mb-4 mb-md-0">
-              <a href="notice-single.html" class="h4 mb-3 d-block">Biltong sirloin sausage brisket porchetta prosciutto</a>
-              <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt perferendis saepe omnis officia! Doloribus quae maiores laboriosam praesentium enim fugiat ipsam laudantium assumenda!</p>
-            </div>
-            <div class="d-md-table-cell text-right pr-0 pr-md-4"><a href="notice-single.html" class="btn btn-primary">read more</a></div>
-          </li>
-          <!-- notice item -->
-          <li class="d-md-table mb-4 w-100 border-bottom hover-shadow">
-            <div class="d-md-table-cell text-center p-4 bg-primary text-white mb-4 mb-md-0"><span class="h2 d-block">25</span> APR,2019</div>
-            <div class="d-md-table-cell px-4 vertical-align-middle mb-4 mb-md-0">
-              <a href="notice-single.html" class="h4 mb-3 d-block">Teaching Materials and Testing Methods</a>
-              <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt perferendis saepe omnis officia! Doloribus quae maiores laboriosam praesentium enim fugiat ipsam laudantium assumenda!</p>
-            </div>
-            <div class="d-md-table-cell text-right pr-0 pr-md-4"><a href="notice-single.html" class="btn btn-primary">read more</a></div>
-          </li>
-          <!-- notice item -->
-          <li class="d-md-table mb-4 w-100 border-bottom hover-shadow">
-            <div class="d-md-table-cell text-center p-4 bg-primary text-white mb-4 mb-md-0"><span class="h2 d-block">23</span> APR,2019</div>
-            <div class="d-md-table-cell px-4 vertical-align-middle mb-4 mb-md-0">
-              <a href="notice-single.html" class="h4 mb-3 d-block">Biltong sirloin sausage brisket porchetta prosciutto</a>
-              <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt perferendis saepe omnis officia! Doloribus quae maiores laboriosam praesentium enim fugiat ipsam laudantium assumenda!</p>
-            </div>
-            <div class="d-md-table-cell text-right pr-0 pr-md-4"><a href="notice-single.html" class="btn btn-primary">read more</a></div>
-          </li>
+            <li>
+                <h4  id="B-02" class="text-primary">2. Shathapatha Brāhmanā (B-02)</h4>
+                <p>
+                </p>               
+            </li>
+
+            <li>
+                <h4  id="B-03" class="text-primary">3. Sāma Brāhmanā (B-03)</h4>
+                <p>
+                </p>               
+            </li>
+
+            <li>
+                <h4  id="B-04" class="text-primary">4. Gōpatha Brāhmanā (B-04)</h4>
+                <p>
+                </p>               
+            </li>
         </ul>
-      </div>
+
+        <div class="pt-4 pb-4">
+                <a class="text-primary" href="/en/academics.html">Back to Academics</a>
+        </div>
     </div>
-  </div>
 </section>
-<!-- /notice -->
+
 
 <!--  FOOTER AREA START  -->
 <section id="footer" class="section-padding">
@@ -217,3 +190,4 @@
 
   </body>
   </html>
+   
