--- a/en/notice-single.html
+++ b/en/notice-single.html
@@ -36,8 +36,8 @@
 
 <nav class="navbar navbar-expand-lg fixed-top trans-navigation">
   <div class="container">
-    <a class="navbar-brand" href="../en/index.html">
-      <img src="../assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo">
+    <a class="navbar-brand" href="/en/index.html">
+      <img src="/assets/images/logo3.png" alt="University of Vedic Sciences" class="img-fluid b-logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="mainNav"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -47,24 +47,25 @@
     </button>
 
     <div class="collapse navbar-collapse justify-content-end" id="mainNav">
+      <h3 class="text-white">University of Applied Vedic Sciences</h3>
       <ul class="navbar-nav ">
         <li class="nav-item">
-          <a class="nav-link smoth-scroll" href="../en/index.html">Home</a>
+          <a class="nav-link smoth-scroll" href="/en/index.html">Home</a>
         </li>       
         <li class="nav-item">
-          <a class="nav-link smoth-scroll" href="../en/about.html">About</a>
+          <a class="nav-link smoth-scroll" href="/en/about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link smoth-scroll" href="../en/academics.html">Academics</a>
+          <a class="nav-link smoth-scroll" href="/en/academics.html">Academics</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link smoth-scroll" href="../en/faculty.html">Faculty</a>
+          <a class="nav-link smoth-scroll" href="/en/faculty.html">Faculty</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link smoth-scroll" href="../en/blog.html">Blog</a>
+          <a class="nav-link smoth-scroll" href="/en/blog.html">Blog</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link smoth-scroll" href="../en/contact.html">Contact</a>
+          <a class="nav-link smoth-scroll" href="/en/contact.html">Contact</a>
         </li>
       </ul>
     </div>
@@ -127,7 +128,9 @@
     <div class="row justify-content-around">
       <div class="col-lg-4">
         <div class="footer-widget footer-link">
-          <h4>We provide relevant high quality knowledge transfer of Vedas.</h4>
+          <a class="navbar-brand" href="/en/index.html">
+            <img src="/assets/images/logo2.png" alt="University of Vedic Sciences" class="img-fluid b-logo">
+          </a>
           <p>We are dedicated to a continuing vedic tradition of excellence in an ever changing world.</p>
           <p>Online University of Applied Vedic Sciences is the research oriented academic organization with outcome-driven real-world projects.</p>
         </div>
@@ -136,11 +139,11 @@
         <div class="footer-widget footer-link">
           <h4>About</h4>
           <ul>
-            <li><a href="../en/about.html">About</a></li>
-            <li><a href="../en/academics.html">Academics</a></li>
-            <li><a href="../en/faculty.html">Faculty</a></li>
-            <li><a href="../en/advisory.html">Advisory Board</a></li>
-            <li><a href="../en/research.html">Research</a></li>           
+            <li><a href="/en/about.html">About</a></li>
+            <li><a href="/en/academics.html">Academics</a></li>
+            <li><a href="/en/faculty.html">Faculty</a></li>
+            <li><a href="/en/advisory.html">Advisory Board</a></li>
+            <li><a href="/en/research.html">Research</a></li>           
           </ul>
         </div>
       </div>
@@ -149,11 +152,11 @@
         <div class="footer-widget footer-link">
           <h4>Links</h4>
           <ul>
-            <li><a href="../en/accreditation.html">Accreditation Status</a></li>
-            <li><a href="../en/contact.html">Contact</a></li>
-            <li><a href="../en/privacy.html">Privacy Policy</a></li>
-            <li><a href="../en/terms.html">Terms & Conditions</a></li>
-            <li><a href="../en/blog.html">Blog</a></li>
+            <li><a href="/en/accreditation.html">Accreditation Status</a></li>
+            <li><a href="/en/contact.html">Contact</a></li>
+            <li><a href="/en/privacy.html">Privacy Policy</a></li>
+            <li><a href="/en/terms.html">Terms & Conditions</a></li>
+            <li><a href="/en/blog.html">Blog</a></li>
           </ul>
         </div>
       </div>
