added logo and academics

--- a/en/privacy.html
+++ b/en/privacy.html
@@ -516,16 +516,16 @@
 
     
     <!-- Main jQuery -->
-    <script src="../assets/plugins/jquery/jquery.min.js"></script>
+    <script src="/assets/plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap css -->
-    <script src="../assets/plugins/bootstrap/bootstrap.min.js"></script>
+    <script src="/assets/plugins/bootstrap/bootstrap.min.js"></script>
 
     <!-- Google Map -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcABaamniA6OL5YvYSpB3pFMNrXwXnLwU"></script>
-    <script src="../assets/plugins/google-map/map.js"></script>
+    <script src="/assets/plugins/google-map/map.js"></script>
 
     <!-- main script -->
-    <script src="../assets/js/script.js"></script>
+    <script src="/assets/js/script.js"></script>
 
   </body>
   </html>
