--- a/en/scholarship.html
+++ b/en/scholarship.html
@@ -37,7 +37,7 @@
 <nav class="navbar navbar-expand-lg fixed-top trans-navigation">
   <div class="container">
     <a class="navbar-brand" href="/en/index.html">
-      <img src="/assets/images/logo3.png" alt="University of Vedic Sciences" class="img-fluid b-logo">
+      <img src="/assets/images/logo-white.png" alt="University of Vedic Sciences" class="img-fluid b-logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="mainNav"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -46,8 +46,7 @@
       </span>
     </button>
 
-    <div class="collapse navbar-collapse justify-content-end" id="mainNav">
-      <h3 class="text-white">University of Applied Vedic Sciences</h3>
+    <div class="collapse navbar-collapse justify-content-end" id="mainNav">      
       <ul class="navbar-nav ">
         <li class="nav-item">
           <a class="nav-link smoth-scroll" href="/en/index.html">Home</a>
@@ -174,7 +173,7 @@
       <div class="col-lg-4">
         <div class="footer-widget footer-link">
           <a class="navbar-brand" href="/en/index.html">
-            <img src="/assets/images/logo2.png" alt="University of Vedic Sciences" class="img-fluid b-logo">
+            <img src="/assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo">
           </a>
           <p>We are dedicated to a continuing vedic tradition of excellence in an ever changing world.</p>
           <p>Online University of Applied Vedic Sciences is the research oriented academic organization with outcome-driven real-world projects.</p>
