--- a/en/courses/upanishads.html
+++ b/en/courses/upanishads.html
@@ -70,7 +70,7 @@
   </div>
 </nav>
 <!--MAIN HEADER AREA END -->
-
+<div class="page-banner-area2 page-service bg-primary2"  id="page-banner"></div>
 <section class="pt-4">
     <div class="container pt-4">
         <div class="pt-4 pb-4">
@@ -78,22 +78,28 @@
         </div>
         <h3 class="pb-4">Academic Courses in Upanishads (10)</h3>
     <ul>
-        <li>
-            <h4 id="U-01" class="text-primary">1. Ēsopanishad (U-01)</h4>
+        <li id="U-01" >
+            <h4 class="text-primary">1. Ēsopanishad (U-01)</h4>
             <p>This Upanishad is the 40th chapter of Yajur Veda and is also called as Mantropanishad, and vājasanēyōpanishad. 
               Since it is the last chapter of Yajurvēda, it is also called as Vēdānta. 
               This Upanishad is about Jēvāthma and Paramāthma. </p>
+              <div class="pt-4 pb-4">
+                <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+        </div>
           </li>
 
-          <li>
-            <h4 id="U-02" class="text-primary">2. KĒNŌPANISHAD (U-02)</h4>
+          <li id="U-02" >
+            <h4 class="text-primary">2. KĒNŌPANISHAD (U-02)</h4>
             <p>It is heard that there are many branches of Sāma Vēda. 
               Among these branches one of them is “Thalavakāra”. 
               In this there are nine chapters. Kēna is the last Chapter.</p>
+              <div class="pt-4 pb-4">
+                <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+        </div>
           </li>
 
-          <li>
-            <h4 id="U-03" class="text-primary">3. Katopanishad (U-03)</h4>
+          <li id="U-03">
+            <h4 class="text-primary">3. Katopanishad (U-03)</h4>
             <p>Introduction: Uddalaka is a Rishi with different names like Vājashrava, Goutham etc. 
               He had a son named Nachikētha also referred as Ouddalaka, Ārunni etc.
               Uddalaka performs SarvaMedha Yagna which is also called as Vishwajith. 
@@ -115,8 +121,8 @@
               </p>
           </li>
 
-          <li>
-            <h4 id="U-04" class="text-primary">4. Prashnōpanishad (U-04)</h4>
+          <li id="U-04">
+            <h4  class="text-primary">4. Prashnōpanishad (U-04)</h4>
             <p>
               First Prashna (Question)<br/>
               <p>1.	Sukēsha (Bharadwājā’s son), Shibi Kumara, Sathyakāma, Gārgya (Sourya’s son), Koushlya (son of Ashwala), 
@@ -127,10 +133,13 @@
                   he would reply to whatever he knows.</p>
                   <p>3.	After one-year Kabandhi approached Maharshi Pippala and said, 
                     “Swāmi, due to whom these people, the entire living beings and matter is born?”        </p>
+                    <div class="pt-4 pb-4">
+                      <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+              </div>
           </li>
 
-          <li>
-            <h4  id="U-05" class="text-primary">5. Mundakopanishad (U-05)</h4>
+          <li id="U-05">
+            <h4  class="text-primary">5. Mundakopanishad (U-05)</h4>
             <p>This Upanishad is supposed to belong to Atharva Vēda. This Upanishad is all about Brahma Vidya. 
               It is believed that Brahma Vidya which appears in this Upanishad is originally taught by Maharshi Brahma to Atharva, 
               then Atharva to Angira, then Angira to Sathyavahana, then Sathyavahana to Angirasa and then finally Angira to Shounaka. 
@@ -162,16 +171,22 @@
                  Bhakthi are explained. In this section how the Athma (soul) will travel through Mukthi and 
                  comes back to life is explained.
               </p>
+              <div class="pt-4 pb-4">
+                <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+        </div>
           </li>
 
-          <li>
-            <h4 id="U-06" class="text-primary">6. Māndūkyopanishad (U-06)</h4>
+          <li id="U-06">
+            <h4 class="text-primary">6. Māndūkyopanishad (U-06)</h4>
             <p>This Upanishad is from Māndūkya branch of Atharva Vēda written by Rishi Māndūkya. 
               This is smallest among all Upanishads. Only twelve slōkās are present in this Upanishad.</p>
+              <div class="pt-4 pb-4">
+                <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+        </div>
           </li>
 
-          <li>
-            <h4 id="U-07" class="text-primary">7. Ithareyopanishad (U-07)</h4>
+          <li id="U-07">
+            <h4 class="text-primary">7. Ithareyopanishad (U-07)</h4>
             <p>This Upanishad belongs to Rigveda&rsquo;s Aranyaka part. In this Upanishad there are three chapters. 
               First chapter contains the description of the creation of materials and living bodies. 
               Explanation of entry of the soul in the human body and the purpose of human life is given. 
@@ -179,25 +194,34 @@
               In the ninth month the soul realizes the difficulties he/she is facing, and the karma done in the past life. 
               The soul then takes resolution to exit this birth and death cycle and the path to attain bliss is described. 
               In the third chapter the properties of God and Soul are explained in detail. </p>
+              <div class="pt-4 pb-4">
+                <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+        </div>
           </li>
 
-          <li>
-            <h4 id="U-08" class="text-primary">8. Thythirīyopanishad (U-08)</h4>
+          <li id="U-08">
+            <h4 class="text-primary">8. Thythirīyopanishad (U-08)</h4>
             <p>This Upanishad is internal to “Taithiriya” branch of Yajur Vēda. In this Upanishad there are three chapters. 
               First is “Siksha” that gives the practices that humans should follow for a blessed life. 
               In the second chapter the necessary practices and methods are given. 
               Third chapter is questions and answers pertaining to bliss.  </p>
+              <div class="pt-4 pb-4">
+                <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+        </div>
           </li>
 
-          <li>
-            <h4 id="U-09" class="text-primary">9. Chāndogya Upanishad (U-09)</h4>
+          <li id="U-09">
+            <h4 class="text-primary">9. Chāndogya Upanishad (U-09)</h4>
             <p>Those who chant Chandass are called Chāndogya. Vēdas contain chandass such as Gāyatri, Ushnnik, 
               Anustup, Brhathi, Pamkti, Trishtup, and Jagathi etc. Mainly this Upanishad is used by Sāma Vēda chanters. 
               In this Upanishad we will find different subjects, upāsana, explanation of the words “thathvamasi” etc. </p>
+              <div class="pt-4 pb-4">
+                <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+        </div>
           </li>
     
-         <li>
-            <h4 id="U-10" class="text-primary">10. Brihadāranyakopanishad (U-10)</h4>
+         <li id="U-10">
+            <h4 class="text-primary">10. Brihadāranyakopanishad (U-10)</h4>
             <p>This Upanishad is obtained from Rishi “Āditya” and belongs to Sukla Yajurvēda. 
             This Upanishad is in prose form and explained by Rishi Vājasanēya Yājnavalkya. 
             There are six chapters in this Upanishad. First chapter has six brāhmanās, second chapter has six brāhmanās, 
@@ -205,12 +229,12 @@
             and the sixth chapter has five brāhmanās. Total prose stanzas are 415 in this Upanishad. 
             This Upanishad consists of Srhshti (Creation), Mruthyu (Death), Prānna (Vitals), Brahmam, and Madhu Vidya. 
             Information is in the form of discussion and stories. </p>
+            <div class="pt-4 pb-4">
+              <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+      </div>
         </li>
       </ul>
-
-        <div class="pt-4 pb-4">
-                <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
-        </div>
+       
     </div>
 </section>
 
@@ -222,10 +246,10 @@
       <div class="col-lg-4">
         <div class="footer-widget footer-link">
           <a class="navbar-brand" href="/en/index.html">
-            <img src="/assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo">
-          </a>
-          <p>We are dedicated to a continuing vedic tradition of excellence in an ever changing world.</p>
-          <p>Online University of Applied Vedic Sciences is the research oriented academic organization with outcome-driven real-world projects.</p>
+            <img src="/assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo d-flex">
+          </a>         
+          <p>University of Applied Vedic Sciences (online) is the research oriented academic 
+            organization with outcome-driven real-world projects.</p>
         </div>
       </div>
       <div class="col-lg-2 col-md-4 col-6">
@@ -235,8 +259,7 @@
             <li><a href="/en/about.html">About</a></li>
             <li><a href="/en/academics.html">Academics</a></li>
             <li><a href="/en/faculty.html">Faculty</a></li>
-            <li><a href="/en/advisory.html">Advisory Board</a></li>
-            <li><a href="/en/research.html">Research</a></li>           
+            <li><a href="/en/advisory.html">Advisory Board</a></li>                  
           </ul>
         </div>
       </div>
@@ -249,16 +272,13 @@
             <li><a href="/en/contact.html">Contact</a></li>
             <li><a href="/en/privacy.html">Privacy Policy</a></li>
             <li><a href="/en/terms.html">Terms & Conditions</a></li>
-            <li><a href="/en/blog.html">Blog</a></li>
-          </ul>
+           </ul>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="footer-widget footer-text">
           <h4>Reach Us</h4>
           <p class="mail"><span>Email: </span>support@vedic.university</p>
-          <p><span>Phone: </span>+1 (202) 277-3894</p>
-          <p><span>Location: </span>McDonough, Georgia, USA</p>
         </div>
       </div>
     </div>
