--- a/en/courses/vedangas.html
+++ b/en/courses/vedangas.html
@@ -71,6 +71,7 @@
 </nav>
 <!--MAIN HEADER AREA END -->
 
+<div class="page-banner-area2 page-service bg-primary2"  id="page-banner"></div>
 <section class="pt-4">
     <div class="container pt-4">
         <div class="pt-4 pb-4">
@@ -86,7 +87,10 @@
                     In order to pronounce the Mantras in a proper way, this Vēdānga is written by Pānnini. 
                     The pronunciation of alphabets in Sanskritam is scientific in nature. That means the pronunciation is 
                     related to the development of health of the person who is talking and who is listening.  
-                  </p>          
+                  </p>  
+                  <div class="pt-4 pb-4">
+                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+            </div>        
             </li>
 
             <li>
@@ -113,7 +117,9 @@
                   It has two “शी॒र्षे” (head) – Sup and Ting. It has “स॒प्त हस्ता॑सो” (seven hands) – seven Vibhaktis. 
                   The Svarūpam of Vyākaranna is fixed in the “वृ॑ष॒भ” (Ox) “Urassu” (chest), “KanTam” (throat), and “Shirassu” (head).  
                   </p>
-              
+                  <div class="pt-4 pb-4">
+                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+            </div>
             </li>
 
             <li>
@@ -128,7 +134,10 @@
                     Ushnnik (28), Anushtup (32), Brihati (36), Pankti (40), Trishtup (44), Jagathi (48), Athijagathi (52), 
                     Shakvari (56), Athishakvari (76), Krithi (80), Prakrithi (84), Ākrithi (88), Vikrithi (92), 
                     Samskrithi (96), Abhikrithi (100), Uthkrithi (104).  
-                  </p>              
+                  </p>     
+                  <div class="pt-4 pb-4">
+                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+            </div>         
             </li>
 
             <li>
@@ -139,7 +148,10 @@
                     contains explanations for 734 Mantras and 32 Shākhā Mantras. Niruktham is also called as 
                     commentary to Nighantu. To give the Vyutpatti (etymology) of Shabda (sound of word) is the 
                     aim of Niruktham. Nighantu consists of definitions of difficult words from Vēdas. 
-                  </p>             
+                  </p>   
+                  <div class="pt-4 pb-4">
+                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+            </div>          
             </li>
 
             <li>
@@ -152,6 +164,9 @@
                     All such details are explained in this Jyōthishya Shāstra. This Shāstra gives extraordinary details of 
                     creation because of knowing the Nakshatra through this Shāstra. 
                   </p>
+                  <div class="pt-4 pb-4">
+                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+            </div>
             </li>
 
             <li>
@@ -163,13 +178,14 @@
                     their uses. Grhya Sūthras explain the duties of married persons. It explains the Shōdasha Samskārās, and 
                     Pancha mahā Yajnas. Dharma Sūthras explain the duties of Varnnāshramas, social principles, Government and 
                     Public Dharma, Family relations, division of properties, daily duties etc.
-                  </p>              
+                  </p>
+                  <div class="pt-4 pb-4">
+                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+            </div>              
             </li>
         </ul>
 
-        <div class="pt-4 pb-4">
-                <a class="text-primary" href="/en/academics.html">Back to Academics</a>
-        </div>
+       
     </div>
 </section>
 
@@ -181,10 +197,10 @@
       <div class="col-lg-4">
         <div class="footer-widget footer-link">
           <a class="navbar-brand" href="/en/index.html">
-            <img src="/assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo">
-          </a>
-          <p>We are dedicated to a continuing vedic tradition of excellence in an ever changing world.</p>
-          <p>Online University of Applied Vedic Sciences is the research oriented academic organization with outcome-driven real-world projects.</p>
+            <img src="/assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo d-flex">
+          </a>         
+          <p>University of Applied Vedic Sciences (online) is the research oriented academic 
+            organization with outcome-driven real-world projects.</p>
         </div>
       </div>
       <div class="col-lg-2 col-md-4 col-6">
@@ -194,8 +210,7 @@
             <li><a href="/en/about.html">About</a></li>
             <li><a href="/en/academics.html">Academics</a></li>
             <li><a href="/en/faculty.html">Faculty</a></li>
-            <li><a href="/en/advisory.html">Advisory Board</a></li>
-            <li><a href="/en/research.html">Research</a></li>           
+            <li><a href="/en/advisory.html">Advisory Board</a></li>                  
           </ul>
         </div>
       </div>
@@ -208,16 +223,13 @@
             <li><a href="/en/contact.html">Contact</a></li>
             <li><a href="/en/privacy.html">Privacy Policy</a></li>
             <li><a href="/en/terms.html">Terms & Conditions</a></li>
-            <li><a href="/en/blog.html">Blog</a></li>
-          </ul>
+           </ul>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="footer-widget footer-text">
           <h4>Reach Us</h4>
           <p class="mail"><span>Email: </span>support@vedic.university</p>
-          <p><span>Phone: </span>+1 (202) 277-3894</p>
-          <p><span>Location: </span>McDonough, Georgia, USA</p>
         </div>
       </div>
     </div>
