--- a/en/founder.html
+++ b/en/founder.html
@@ -12,7 +12,7 @@
 
   <!-- ** Basic Page Needs ** -->
   <meta charset="utf-8">
-  <title>Academics - Puranas - University of Vedic Sciences</title>
+  <title>Founder - University of Vedic Sciences</title>
   <!-- ** Mobile Specific Metas ** -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="University of Vedic Sciecnes Website">
@@ -70,59 +70,57 @@
   </div>
 </nav>
 <!--MAIN HEADER AREA END -->
-
-<div class="page-banner-area2 page-service bg-primary2"  id="page-banner"></div>
-
-<section class="pt-4">
-    <div class="container pt-4">
-        <div class="pt-4 pb-4">
-                <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+<!--MAIN BANNER AREA START -->
+<div class="page-banner-area page-contact" id="page-banner">
+  <div class="overlay dark-overlay"></div>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-8 m-auto text-center col-sm-12 col-md-12">
+        <div class="banner-content content-padding">
+          <h1 class="text-white">Our University Founder</h1>
+          <p></p>
         </div>
-        <h3 class="pt-4 pb-4">Academic Courses in Vēdas (4)</h3>
-        <ul>
-            <li>
-                <h4  id="V-01" class="text-primary">1. Rigvēda (V-01)</h4>
-                <p>                   
-                </p>       
-                <div class="pt-4 pb-4">
-                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
-            </div>         
-            </li>
-
-            <li>
-                <h4  id="V-02" class="text-primary">2. Yajurvēda (V-02)</h4>
-                <p>                   
-                </p>     
-                <div class="pt-4 pb-4">
-                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
-            </div>           
-            </li>
-
-            <li>
-                <h4  id="V-03" class="text-primary">3. Samavēda (V-03)</h4>
-                <p>                   
-                </p>    
-                <div class="pt-4 pb-4">
-                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
-            </div>            
-            </li>
-
-            <li>
-                <h4  id="V-04" class="text-primary">4. Atharvavēda (V-04)</h4>
-                <p>                   
-                </p>   
-                <div class="pt-4 pb-4">
-                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
-            </div>             
-            </li>
-        </ul>
-
-       
+      </div>
     </div>
+  </div>
+</div>
+<!--MAIN HEADER AREA END -->
+
+<section class="section-padding">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-lg-6 col-md-4">
+        <img src="/assets/images/about/about-4.jpg" alt="" class="img-fluid w-100">
+      </div>
+      <div class="col-lg-6 col-sm-12 col-md-8 mb-4">
+        <h3 class="mb-3">Founder: Dr. Venkata Chaganti</h3>
+        <p class="mb-4">
+          Dr. Venkata R Chaganti, founder, has PhD in Physics with Quantum Dots Specialization from Georgia State University.  
+          His vast experience includes teaching and serving AI/ML industries in various capacities. 
+          Currently Dr. Chaganti is working as Chief Scientific Officer for a few startup companies which focusses on 
+          finding food allergies, medical diagnostics, and environmental aspects by using Vedic, AI, and Nano Sciences.
+          He also worked on medical industry in relation to various medical equipment.
+        </p>
+        <p>
+          Dr. Venkata Chaganti, the president of Vedas World Inc, a non-profit organization established in Atlanta, USA, focusing on propagating 
+          Vedic concepts and doing scientific evidence-based research on Vedic principles.
+          Dr. Chaganti did research in Vedas for more than 38 years and more than 30 years of experience in 
+          performing Yajna rituals. Through Vedas World, Dr. Chaganti, has been continuously educating people 
+          on Vedic aspects through their website: www.vedas.us, www.vedas.world  and 
+          YouTube Channel (Venkata Chaganti, Vedas World) with more than 700 videos so far since 2015.
+        </p>
+        <p>
+          Dr. Venkata Chaganti is also serving as president for Vedas WIKI, a non-profit organization focussing
+          on providing digital tranformation to vedic mantras. 
+        </p>
+      </div>
+     
+    </div>
+  </div>
 </section>
 
 
-
+<!--  Google Map END  -->
 <!--  FOOTER AREA START  -->
 <section id="footer" class="section-padding">
   <div class="container">
@@ -176,7 +174,6 @@
   </div>
 </section>
 <!--  FOOTER AREA END  -->
-
    
 
     <!-- 
@@ -198,4 +195,3 @@
 
   </body>
   </html>
-   
