--- a/en/team.html
+++ b/en/team.html
@@ -88,60 +88,6 @@
 	</div>
 </section>
 
-<!--  Mission AREA START  -->
-<section id="about" class="bg-light">
-  <div class="about-bg-img d-none d-lg-block d-md-block"></div>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-7 col-sm-12 col-md-8">
-        <div class="about-content">
-          <h5 class="subtitle">About us</h5>
-          <h3>We are making beautiful <br>design layout for your business</h3>
-          <p>We craft beautiful website layout from scratch.You need not to worry about site design and other technial
-            issue.We provide these attractive service as a bonus.Let's have atalk together for your next project.</p>
-
-          <ul class="about-list">
-            <li><i class="far fa-check-circle"></i> Responsive site</li>
-
-            <li>
-              <i class="far fa-check-circle"> </i> Latest bootstrap 4
-            </li>
-
-            <li>
-              <i class="far fa-check-circle"> </i> Modern and clean design
-            </li>
-            <li>
-              <i class="far fa-check-circle"> </i> Working contact form
-            </li>
-            <li>
-              <i class="far fa-check-circle"> </i> Premium services and support
-            </li>
-            <li>
-              <i class="far fa-check-circle"></i> Cross browser compatiabilty
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!--  Mission AREA END  -->
-
-<!--  Founder PARTNER START  -->
-<section id="service-head" class=" bg-feature">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 col-sm-12 m-auto">
-        <div class="section-heading text-white">
-          <h4 class="section-title">Full stack digital marketing solution</h4>
-          <p>We’re full service which means we’ve got you covered on design & content right through to digital. You’ll
-            form a lasting relationship with us.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!--  Founder PARTNER END  -->
 <!--  SECTION TEAM  -->
 <section class="section-padding bg-gray">
   <div class="container">
@@ -219,10 +165,10 @@
       <div class="col-lg-4">
         <div class="footer-widget footer-link">
           <a class="navbar-brand" href="/en/index.html">
-            <img src="/assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo">
-          </a>
-          <p>We are dedicated to a continuing vedic tradition of excellence in an ever changing world.</p>
-          <p>Online University of Applied Vedic Sciences is the research oriented academic organization with outcome-driven real-world projects.</p>
+            <img src="/assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo d-flex">
+          </a>         
+          <p>University of Applied Vedic Sciences (online) is the research oriented academic 
+            organization with outcome-driven real-world projects.</p>
         </div>
       </div>
       <div class="col-lg-2 col-md-4 col-6">
@@ -232,8 +178,7 @@
             <li><a href="/en/about.html">About</a></li>
             <li><a href="/en/academics.html">Academics</a></li>
             <li><a href="/en/faculty.html">Faculty</a></li>
-            <li><a href="/en/advisory.html">Advisory Board</a></li>
-            <li><a href="/en/research.html">Research</a></li>           
+            <li><a href="/en/advisory.html">Advisory Board</a></li>                  
           </ul>
         </div>
       </div>
@@ -246,16 +191,13 @@
             <li><a href="/en/contact.html">Contact</a></li>
             <li><a href="/en/privacy.html">Privacy Policy</a></li>
             <li><a href="/en/terms.html">Terms & Conditions</a></li>
-            <li><a href="/en/blog.html">Blog</a></li>
-          </ul>
+           </ul>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="footer-widget footer-text">
           <h4>Reach Us</h4>
           <p class="mail"><span>Email: </span>support@vedic.university</p>
-          <p><span>Phone: </span>+1 (202) 277-3894</p>
-          <p><span>Location: </span>McDonough, Georgia, USA</p>
         </div>
       </div>
     </div>
