--- a/en/courses/brahmanas.html
+++ b/en/courses/brahmanas.html
@@ -71,6 +71,8 @@
 </nav>
 <!--MAIN HEADER AREA END -->
 
+<div class="page-banner-area2 page-service bg-primary2"  id="page-banner"></div>
+
 <section class="pt-4">
     <div class="container pt-4">
         <div class="pt-4 pb-4">
@@ -81,31 +83,41 @@
             <li>
                 <h4  id="B-01" class="text-primary">1. Ithareya Brāhmanā (B-01)</h4>
                 <p>
-                </p>               
+                </p>     
+                <div class="pt-4 pb-4">
+                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+            </div>          
             </li>
 
             <li>
                 <h4  id="B-02" class="text-primary">2. Shathapatha Brāhmanā (B-02)</h4>
                 <p>
-                </p>               
+                </p>     
+                <div class="pt-4 pb-4">
+                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+            </div>          
             </li>
 
             <li>
                 <h4  id="B-03" class="text-primary">3. Sāma Brāhmanā (B-03)</h4>
                 <p>
-                </p>               
+                </p>  
+                <div class="pt-4 pb-4">
+                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+            </div>             
             </li>
 
             <li>
                 <h4  id="B-04" class="text-primary">4. Gōpatha Brāhmanā (B-04)</h4>
                 <p>
-                </p>               
+                </p> 
+                <div class="pt-4 pb-4">
+                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+            </div>              
             </li>
         </ul>
 
-        <div class="pt-4 pb-4">
-                <a class="text-primary" href="/en/academics.html">Back to Academics</a>
-        </div>
+      
     </div>
 </section>
 
@@ -117,10 +129,10 @@
       <div class="col-lg-4">
         <div class="footer-widget footer-link">
           <a class="navbar-brand" href="/en/index.html">
-            <img src="/assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo">
-          </a>
-          <p>We are dedicated to a continuing vedic tradition of excellence in an ever changing world.</p>
-          <p>Online University of Applied Vedic Sciences is the research oriented academic organization with outcome-driven real-world projects.</p>
+            <img src="/assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo d-flex">
+          </a>         
+          <p>University of Applied Vedic Sciences (online) is the research oriented academic 
+            organization with outcome-driven real-world projects.</p>
         </div>
       </div>
       <div class="col-lg-2 col-md-4 col-6">
@@ -130,8 +142,7 @@
             <li><a href="/en/about.html">About</a></li>
             <li><a href="/en/academics.html">Academics</a></li>
             <li><a href="/en/faculty.html">Faculty</a></li>
-            <li><a href="/en/advisory.html">Advisory Board</a></li>
-            <li><a href="/en/research.html">Research</a></li>           
+            <li><a href="/en/advisory.html">Advisory Board</a></li>                  
           </ul>
         </div>
       </div>
@@ -144,16 +155,13 @@
             <li><a href="/en/contact.html">Contact</a></li>
             <li><a href="/en/privacy.html">Privacy Policy</a></li>
             <li><a href="/en/terms.html">Terms & Conditions</a></li>
-            <li><a href="/en/blog.html">Blog</a></li>
-          </ul>
+           </ul>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="footer-widget footer-text">
           <h4>Reach Us</h4>
           <p class="mail"><span>Email: </span>support@vedic.university</p>
-          <p><span>Phone: </span>+1 (202) 277-3894</p>
-          <p><span>Location: </span>McDonough, Georgia, USA</p>
         </div>
       </div>
     </div>
