--- a/en/courses/upavedas.html
+++ b/en/courses/upavedas.html
@@ -81,31 +81,41 @@
             <li>
                 <h4  id="UV-01" class="text-primary">1. Ayurveda (UV-01)</h4>
                 <p>                   
-                </p>                
+                </p>      
+                <div class="pt-4 pb-4">
+                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+            </div>          
             </li>
 
             <li>
                 <h4  id="UV-02" class="text-primary">2. Dhanurveda (UV-02)</h4>
                 <p>                   
-                </p>                
+                </p>    
+                <div class="pt-4 pb-4">
+                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+            </div>            
             </li>
 
             <li>
                 <h4  id="UV-03" class="text-primary">3. Ghandarva Vidya (UV-03)</h4>
                 <p>                   
-                </p>                
+                </p>       
+                <div class="pt-4 pb-4">
+                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+            </div>         
             </li>
 
             <li>
                 <h4  id="UV-04" class="text-primary">4. Artha Vēda or Shilpa Vidya (UV-04)</h4>
                 <p>                   
-                </p>                
+                </p>  
+                <div class="pt-4 pb-4">
+                    <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
+            </div>              
             </li>
         </ul>
 
-        <div class="pt-4 pb-4">
-                <a class="text-primary" href="/en/academics.html">Back to Academics</a>
-        </div>
+       
     </div>
 </section>
 
@@ -118,10 +128,10 @@
       <div class="col-lg-4">
         <div class="footer-widget footer-link">
           <a class="navbar-brand" href="/en/index.html">
-            <img src="/assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo">
-          </a>
-          <p>We are dedicated to a continuing vedic tradition of excellence in an ever changing world.</p>
-          <p>Online University of Applied Vedic Sciences is the research oriented academic organization with outcome-driven real-world projects.</p>
+            <img src="/assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo d-flex">
+          </a>         
+          <p>University of Applied Vedic Sciences (online) is the research oriented academic 
+            organization with outcome-driven real-world projects.</p>
         </div>
       </div>
       <div class="col-lg-2 col-md-4 col-6">
@@ -131,8 +141,7 @@
             <li><a href="/en/about.html">About</a></li>
             <li><a href="/en/academics.html">Academics</a></li>
             <li><a href="/en/faculty.html">Faculty</a></li>
-            <li><a href="/en/advisory.html">Advisory Board</a></li>
-            <li><a href="/en/research.html">Research</a></li>           
+            <li><a href="/en/advisory.html">Advisory Board</a></li>                  
           </ul>
         </div>
       </div>
@@ -145,16 +154,13 @@
             <li><a href="/en/contact.html">Contact</a></li>
             <li><a href="/en/privacy.html">Privacy Policy</a></li>
             <li><a href="/en/terms.html">Terms & Conditions</a></li>
-            <li><a href="/en/blog.html">Blog</a></li>
-          </ul>
+           </ul>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="footer-widget footer-text">
           <h4>Reach Us</h4>
           <p class="mail"><span>Email: </span>support@vedic.university</p>
-          <p><span>Phone: </span>+1 (202) 277-3894</p>
-          <p><span>Location: </span>McDonough, Georgia, USA</p>
         </div>
       </div>
     </div>
