--- a/en/faculty.html
+++ b/en/faculty.html
@@ -221,204 +221,6 @@
   </div>
 </section>
 <!--  SECTION TEAM END  -->
-<!-- research -->
-<section class="section">
-  <div class="container">
-    <div class="row">
-      <!-- recharch item -->
-      <div class="col-lg-4 col-sm-6 mb-4">
-        <div class="card rounded-0 hover-shadow border-top-0 border-left-0 border-right-0">
-          <img class="card-img-top rounded-0" src="/assets/images/research/research-1.jpg" alt="research thumb">
-          <div class="card-body">
-            <h4 class="card-title">Geography</h4>
-            <p class="card-text">
-              Some quick example text to build on the card title
-              and make up the bulk of the card's content.
-            </p>
-          </div>
-        </div>
-      </div>
-      <!-- recharch item -->
-      <div class="col-lg-4 col-sm-6 mb-4">
-        <div class="card rounded-0 hover-shadow border-top-0 border-left-0 border-right-0">
-          <img class="card-img-top rounded-0" src="/assets/images/research/research-2.jpg" alt="research thumb">
-          <div class="card-body">
-            <h4 class="card-title">Mathematical</h4>
-            <p class="card-text">
-              Some quick example text to build on the card title
-              and make up the bulk of the card's content.
-            </p>
-          </div>
-        </div>
-      </div>
-      <!-- recharch item -->
-      <div class="col-lg-4 col-sm-6 mb-4">
-        <div class="card rounded-0 hover-shadow border-top-0 border-left-0 border-right-0">
-          <img class="card-img-top rounded-0" src="/assets/images/research/research-3.jpg" alt="research thumb">
-          <div class="card-body">
-            <h4 class="card-title">Humanities</h4>
-            <p class="card-text">
-              Some quick example text to build on the card title
-              and make up the bulk of the card's content.
-            </p>
-          </div>
-        </div>
-      </div>
-      <!-- recharch item -->
-      <div class="col-lg-4 col-sm-6 mb-4">
-        <div class="card rounded-0 hover-shadow border-top-0 border-left-0 border-right-0">
-          <img class="card-img-top rounded-0" src="/assets/images/research/research-4.jpg" alt="research thumb">
-          <div class="card-body">
-            <h4 class="card-title">Physical & Sciences</h4>
-            <p class="card-text">
-              Some quick example text to build on the card title
-              and make up the bulk of the card's content.
-            </p>
-          </div>
-        </div>
-      </div>
-      <!-- recharch item -->
-      <div class="col-lg-4 col-sm-6 mb-4">
-        <div class="card rounded-0 hover-shadow border-top-0 border-left-0 border-right-0">
-          <img class="card-img-top rounded-0" src="/assets/images/research/research-5.jpg" alt="research thumb">
-          <div class="card-body">
-            <h4 class="card-title">Biological Sciences</h4>
-            <p class="card-text">
-              Some quick example text to build on the card title
-              and make up the bulk of the card's content.
-            </p>
-          </div>
-        </div>
-      </div>
-      <!-- recharch item -->
-      <div class="col-lg-4 col-sm-6 mb-4">
-        <div class="card rounded-0 hover-shadow border-top-0 border-left-0 border-right-0">
-          <img class="card-img-top rounded-0" src="/assets/images/research/research-6.jpg" alt="research thumb">
-          <div class="card-body">
-            <h4 class="card-title">Archaeology</h4>
-            <p class="card-text">
-              Some quick example text to build on the card title
-              and make up the bulk of the card's content.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- /research -->
-
-
-
-<!--  TESTIMONIAL AREA START  -->
-<section class="section-padding bg-main">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 m-auto col-sm-12 col-md-12">
-        <div class="carousel slide" id="test-carousel2">
-          <div class="carousel-inner">
-            <ol class="carousel-indicators">
-              <li data-target="#test-carousel2" data-slide-to="0" class="active"></li>
-              <li data-target="#test-carousel2" data-slide-to="1"></li>
-              <li data-target="#test-carousel2" data-slide-to="2"></li>
-            </ol>
-
-            <div class="carousel-item active">
-              <div class="row">
-                <div class="col-lg-12 col-sm-12">
-                  <div class="testimonial-content style-2">
-                    <div class="author-info ">
-                      <div class="author-img">
-                        <img src="/assets/images/author/3b.jpg" alt="" class="img-fluid">
-                      </div>
-                    </div>
-
-                    <p><i class="icofont icofont-quote-left"></i>They is a great platform to anyone like who want to
-                      start buisiness but not get right decision. It’s really great placefor new to start the buisness
-                      in righ way! <i class="icofont icofont-quote-right"></i></p>
-                    <div class="author-text">
-                      <h5>Marine Joshi</h5>
-                      <p>Senior designer</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item ">
-              <div class="row">
-                <div class="col-lg-12 col-sm-12">
-                  <div class="testimonial-content style-2">
-                    <div class="author-info ">
-                      <div class="author-img">
-                        <img src="/assets/images/author/5b.jpg" alt="" class="img-fluid">
-                      </div>
-                    </div>
-
-                    <p><i class="icofont icofont-quote-left"></i>They is a great platform to anyone like who want to
-                      start buisiness but not get right decision. It’s really great placefor new to start the buisness
-                      in righ way! <i class="icofont icofont-quote-right"></i></p>
-                    <div class="author-text">
-                      <h5>Marine Joshi</h5>
-                      <p>Senior designer</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!--  ITEM END  -->
-
-            <div class="carousel-item ">
-              <div class="row">
-                <div class="col-lg-12 col-sm-12">
-                  <div class="testimonial-content style-2">
-                    <div class="author-info ">
-                      <div class="author-img">
-                        <img src="/assets/images/author/3b.jpg" alt="" class="img-fluid">
-                      </div>
-                    </div>
-
-                    <p><i class="icofont icofont-quote-left"></i>They is a great platform to anyone like who want to
-                      start buisiness but not get right decision. It’s really great placefor new to start the buisness
-                      in righ way!<i class="icofont icofont-quote-right"></i></p>
-                    <div class="author-text">
-                      <h5>Marine Joshi</h5>
-                      <p>Senior designer</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!--  ITEM END  -->
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!--  TESTIMONIAL AREA END  -->
-
-<!--  PARTNER START  -->
-<!--
-<section class="section-padding ">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-3 col-sm-6 col-md-3 text-center">
-        <img src="/assets/images/clients/client01.png" alt="partner" class="img-fluid">
-      </div>
-      <div class="col-lg-3 col-sm-6 col-md-3 text-center">
-        <img src="/assets/images/clients/client06.png" alt="partner" class="img-fluid">
-      </div>
-      <div class="col-lg-3 col-sm-6 col-md-3 text-center">
-        <img src="/assets/images/clients/client04.png" alt="partner" class="img-fluid">
-      </div>
-      <div class="col-lg-3 col-sm-6 col-md-3 text-center">
-        <img src="/assets/images/clients/client05.png" alt="partner" class="img-fluid">
-      </div>
-    </div>
-  </div>
-</section>
--->
-<!--  PARTNER END  -->
 
 <!--  FOOTER AREA START  -->
 <section id="footer" class="section-padding">
@@ -427,10 +229,10 @@
       <div class="col-lg-4">
         <div class="footer-widget footer-link">
           <a class="navbar-brand" href="/en/index.html">
-            <img src="/assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo">
-          </a>
-          <p>We are dedicated to a continuing vedic tradition of excellence in an ever changing world.</p>
-          <p>Online University of Applied Vedic Sciences is the research oriented academic organization with outcome-driven real-world projects.</p>
+            <img src="/assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo d-flex">
+          </a>         
+          <p>University of Applied Vedic Sciences (online) is the research oriented academic 
+            organization with outcome-driven real-world projects.</p>
         </div>
       </div>
       <div class="col-lg-2 col-md-4 col-6">
@@ -440,8 +242,7 @@
             <li><a href="/en/about.html">About</a></li>
             <li><a href="/en/academics.html">Academics</a></li>
             <li><a href="/en/faculty.html">Faculty</a></li>
-            <li><a href="/en/advisory.html">Advisory Board</a></li>
-            <li><a href="/en/research.html">Research</a></li>           
+            <li><a href="/en/advisory.html">Advisory Board</a></li>                  
           </ul>
         </div>
       </div>
@@ -454,16 +255,13 @@
             <li><a href="/en/contact.html">Contact</a></li>
             <li><a href="/en/privacy.html">Privacy Policy</a></li>
             <li><a href="/en/terms.html">Terms & Conditions</a></li>
-            <li><a href="/en/blog.html">Blog</a></li>
-          </ul>
+           </ul>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="footer-widget footer-text">
           <h4>Reach Us</h4>
           <p class="mail"><span>Email: </span>support@vedic.university</p>
-          <p><span>Phone: </span>+1 (202) 277-3894</p>
-          <p><span>Location: </span>McDonough, Georgia, USA</p>
         </div>
       </div>
     </div>
